--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
 </head>
 <body>
 	<div class="container">
-		<div id="buttons"></div>
+		<div id="buttons">
+			<div id="play-rock">Kamień</div>
+			<div id="play-paper">Papier</div>
+			<div id="play-scissors">Nożyce</div>
+		</div>
 		<div id="messages">Zagrałem kamień! Jeśli Twój ruch to papier, to wygrywasz!</div>
 	</div>
-	<script src="js/functions.js"></script>
+	<script src="js/script.js"></script>
 	<script src="js/script.js"></script>
 </body>
 </html>
