--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		</div>
 		<div id="messages">Zagrałem kamień! Jeśli Twój ruch to papier, to wygrywasz!</div>
 	</div>
-	<script src="js/script.js"></script>
+	<script src="js/function.js"></script>
 	<script src="js/script.js"></script>
 </body>
 </html>
